--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> us</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>We believe that anything in life is archivable as long as you have the desire to make it happen. Not looking at others or comparing yourself with them but competing against yourself every day. Just be a better version of your today’s self tomorrow.  
-
-                  In addition, according to google the word “Mettle” means “a person's ability to cope well with difficulties or to face a demanding situation in a spirited and resilient way”. Therefore, we are here to do the best we can to make that project you need happen, we are here to complete that task you need done, and most importantly, we are here to help you in anything we can in the best of our abilities.  </p>
+                <p>We believe that anything in life is achievable as long as you have the desire to make it happen. Not looking at others or comparing yourself with them but competing against yourself every day. Just be a better version of your today’s self tomorrow. In addition, according to google the word “Mettle” means “a person's ability to cope well with difficulties or to face a demanding situation in a spirited and resilient way”. Therefore, we are here to do the best we can to make that project you need happen, we are here to complete that task you need done, and most importantly, we are here to help you in anything we can to the best of our abilities.  </p>
               </div>
             </div>
           </div>
@@ -233,11 +231,9 @@
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-dribbble"></i></a></li><!-- dribble -->
                   <li><a href="index.html#" class="social-btn"><i class="fa fa-twitter"></i></a></li><!-- twitter -->
                   <li><a href="index.html#" class="social-btn"><i class="fa fa-facebook"></i></a></li><!-- facebook -->
-				  <li><a href="index.html#" class="social-btn"><i class="fa fa-deviantart"></i></a></li><!-- deviantart -->
-				  <li><a href="index.html#" class="social-btn"><i class="fa fa-youtube"></i></a></li><!-- youtube -->
+				          <li><a href="index.html#" class="social-btn"><i class="fa fa-instagram"></i></a></li><!-- instragram -->
                 </ul>
               </div>
             </div>
